# toyc-lexer

./: .gitignore  CMakeLists.txt  Makefile  lexer.cpp  main.cpp
codegen/: codegen.cpp
ir/: ir.h  irgen.cpp  irgen.cpp.backup  irgen.h
lexer/: lexer.l
parser/: parser.y
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  symbol.h  symbol_table.cpp  symbol_table.h  token.h  toyc_main.cpp
